fixed z-index issues for landing page

--- a/src/app/components/shero/shero.component.css
+++ b/src/app/components/shero/shero.component.css
@@ -1,5 +1,5 @@
 #jumboWrap {
-  /* position: relative; */
+  position: relative;
   width: 100%;
   display: grid;
   grid-template-rows: repeat(2, auto);
@@ -17,7 +17,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  bottom: -20%;
   left: 0;
   opacity: 1;
   color: #f19c22;
@@ -66,12 +65,14 @@
 }
 
 .heroBoxLast {
+  position: relative;
   padding: 1rem 2rem;
   max-width: 800px;
   border-left: .2rem solid #f19c22;
   text-align: end;
   margin-left: auto;
   font-size: 3rem;
+  z-index: 100;
 }
 
 #story {
@@ -95,12 +96,12 @@
 } */
 @media only screen and (max-width: 40em) {
   #jumboWrap h1 {
-    padding-top: 15%;
+    padding-top: 35%;
     font-size: 3em;
   }
-  .jumboHero {
+  /* .jumboHero {
     font-size: 2em;
-  }
+  } */
   .jumboText {
     line-height: 2rem;
   }
